--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -53,6 +53,7 @@
 \newcommand*{\V}[1]{\vec{\bm{#1}}}
 \newcommand{\dotsuchthat}{\;\cdot\;}
 \newcommand{\suchthat}{\text{ s.t. }}
+\newcommand{\wrt}{w.r.t.\;}
 \newcommand{\notation}[1]{\noindent\fbox{%
     \parbox{\textwidth}{%
         \textbf{Notation}: #1
