--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -61,9 +61,9 @@
 }}
 
 \newtheorem{proposition}{Proposition}
-\newtheorem*{definition}{Definition}
+\newtheorem{definition}{Definition}
 \newtheorem{axiom}{Axiom}
-\newtheorem*{corollary}{Corollary}
+\newtheorem{corollary}{Corollary}
 
 \newcommand{\labeledProposition}[2]{
 	\begin{proposition}
