--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -61,7 +61,7 @@
 }}
 
 \newtheorem{proposition}{Proposition}
-\newtheorem{definition}{Definition}
+\newtheorem*{definition}{Definition}
 \newtheorem{axiom}{Axiom}
 \newtheorem{corollary}{Corollary}
 
