--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -60,10 +60,11 @@
     }%
 }}
 
+\newtheorem*{theorem}{Theorem}
 \newtheorem{proposition}{Proposition}
 \newtheorem*{definition}{Definition}
 \newtheorem{axiom}{Axiom}
-\newtheorem{corollary}{Corollary}
+\newtheorem*{corollary}{Corollary}
 
 \newcommand{\labeledProposition}[2]{
 	\begin{proposition}
