--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -19,6 +19,9 @@
 \usepackage{amsfonts}
 \usepackage{epstopdf}
 \usepackage[table]{xcolor}
+\usepackage{siunitx}
+\usepackage{booktabs}
+\usepackage{multirow}
 
 \usepackage{titlesec}
 
